--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <title>DynamicSubspace</title>
 </head>
 <body>
+  <center>
+    Home | <a href="about.html">About</a>
+</center>
 Hello, world!
 </body>
 </html>
