--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
 </head>
 <body>
   <center>
-    Home | <a href="about.html">About</a>
+    Home | <a href="about.html">About</a> | 
 </center>
-Hello, world!
+  <p>DynamicSubspace</p>
+  <p>This is Jason Ellis' GitHub Pages website.</p>
+  
 </body>
 </html>
