--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
 <html>
 <head>
-<title>DynamicSubspace</title>
+<title>Jason Ellis' Millennium Falcon Collectors Site</title>
 </head>
 <body>
-  <center>
-    Home | <a href="about.html">About</a> | 
-</center>
-  <p>DynamicSubspace</p>
-  <p>This is Jason Ellis' GitHub Pages website.</p>
+  <p><h1>Jason Ellis' Millennium Falcon Collectors Site</h1></p>
+  <p>Home | <a href="kenner.html">Kenner</a> | <a href="hasbro.html">Hasbro</a> | <a href="lego.html">LEGO</a> | <a href="about.html">About</a> | 
+  <p>This website focuses on toys of the Millennium Falcon from the Star Wars film series.</p>
   
 </body>
 </html>
