--- a/about.html
+++ b/about.html
@@ -1,9 +1,11 @@
 <html>
 <head>
-<title>DynamicSubspace - About</title>
+<title>Jason Ellis' Millennium Falcon Collectors Site > About</title>
+</head>
 <body>
-<center>
-<a href="index.html">Home</a> | About
-</center>
+  <p><h1>Jason Ellis' Millennium Falcon Collectors Site</h1></p>
+  <p><a href="index.html">Home</a> | <a href="kenner.html">Kenner</a> | <a href="hasbro.html">Hasbro</a> | <a href="lego.html">LEGO</a> | <a href="about.html">About</a> | 
+  <p>This website focuses on toys of the Millennium Falcon from the Star Wars film series.</p>
+  
 </body>
 </html>
