--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title>Jason Ellis' Millennium Falcon Collectors Site</title>
 </head>
 <body>
-  <p><img src="millenniumfalcontitle.jpg">
+  <img src="millenniumfalcontitle.jpg" alt="Millennium Falcon">
   <p><h1>Jason Ellis' Millennium Falcon Collectors Site</h1></p>
   <p>Home | <a href="kenner.html">Kenner</a> | <a href="hasbro.html">Hasbro</a> | <a href="lego.html">LEGO</a> | <a href="about.html">About</a> | 
   <p>This website shows examples of toys of the Millennium Falcon from the Star Wars film series.</p>
