--- a/kenner.html
+++ b/kenner.html
@@ -3,9 +3,11 @@
 <title>Jason Ellis' Millennium Falcon Collectors Site > Kenner</title>
 </head>
 <body>
-  <p><h1>Jason Ellis' Millennium Falcon Collectors Site</h1></p>
-  <p><a href="index.html">Home</a> | <a href="kenner.html">Kenner</a> | <a href="hasbro.html">Hasbro</a> | <a href="lego.html">LEGO</a> | <a href="about.html">About</a> | 
-  <p>This website focuses on toys of the Millennium Falcon from the Star Wars film series.</p>
+  <p><h1>Jason Ellis' Millennium Falcon Collectors Site > Kenner</h1></p>
+  <p><a href="index.html">Home</a> | Kenner | <a href="hasbro.html">Hasbro</a> | <a href="lego.html">LEGO</a> | <a href="about.html">About</a> | 
+  <p>1979 Kenner Millennium Falcon</p>
+  <img src="kenner-falcon.jpg" alt="Kenner Millennium Falcon">
+  <p>The Kenner Millennium Falcon vehicle toy is scaled to 3 3/4" action figures as shown. It was released in 1979.</p>
   
 </body>
 </html>
