--- a/hasbro.html
+++ b/hasbro.html
@@ -4,8 +4,10 @@
 </head>
 <body>
   <p><h1>Jason Ellis' Millennium Falcon Collectors Site</h1></p>
-  <p><a href="index.html">Home</a> | <a href="kenner.html">Kenner</a> | <a href="hasbro.html">Hasbro</a> | <a href="lego.html">LEGO</a> | <a href="about.html">About</a> | 
-  <p>This website focuses on toys of the Millennium Falcon from the Star Wars film series.</p>
+  <p><a href="index.html">Home</a> | <a href="kenner.html">Kenner</a> | Hasbro | <a href="lego.html">LEGO</a> | <a href="about.html">About</a> | 
+  <p>2008 Hasbro Legacy Millennium Falcon</p>
+  <img src="hasbro-falcon.jpg" alt="Hasbro Millennium Falcon">
+  <p>The Hasbro Legacy Collection Millennium Falcon was scaled to 3 3/4" action figures as shown. It was released in 2008.</p>
   
 </body>
 </html>
