--- a/lego.html
+++ b/lego.html
@@ -3,9 +3,11 @@
 <title>Jason Ellis' Millennium Falcon Collectors Site > LEGO</title>
 </head>
 <body>
-  <p><h1>Jason Ellis' Millennium Falcon Collectors Site</h1></p>
-  <p><a href="index.html">Home</a> | <a href="kenner.html">Kenner</a> | <a href="hasbro.html">Hasbro</a> | <a href="lego.html">LEGO</a> | <a href="about.html">About</a> | 
-  <p>This website focuses on toys of the Millennium Falcon from the Star Wars film series.</p>
+  <p><h1>Jason Ellis' Millennium Falcon Collectors Site > LEGO</h1></p>
+  <p><a href="index.html">Home</a> | <a href="kenner.html">Kenner</a> | <a href="hasbro.html">Hasbro</a> | LEGO | <a href="about.html">About</a> | 
+  <p>LEGO Star Wars The Rise of Skywalker Millennium Falcon 75257</p>
+  <img src="lego-falcon.jpg" alt="LEGO Millennium Falcon">
+  <p>The LEGO Star Wars The Rise of Skywalker Millennium Falcon 75257 is scaled for LEGO minifigures. It was released in 2019.</p>
   
 </body>
 </html>
