--- a/hasbro.html
+++ b/hasbro.html
@@ -3,7 +3,7 @@
 <title>Jason Ellis' Millennium Falcon Collectors Site > Hasbro</title>
 </head>
 <body>
-  <p><h1>Jason Ellis' Millennium Falcon Collectors Site</h1></p>
+  <p><h1>Jason Ellis' Millennium Falcon Collectors Site > Hasbro</h1></p>
   <p><a href="index.html">Home</a> | <a href="kenner.html">Kenner</a> | Hasbro | <a href="lego.html">LEGO</a> | <a href="about.html">About</a> | 
   <p>2008 Hasbro Legacy Millennium Falcon</p>
   <img src="hasbro-falcon.jpg" alt="Hasbro Millennium Falcon">
