--- a/hasbro.html
+++ b/hasbro.html
@@ -5,7 +5,7 @@
 <body>
   <p><h1>Jason Ellis' Millennium Falcon Collectors Site > Hasbro</h1></p>
   <p><a href="index.html">Home</a> | <a href="kenner.html">Kenner</a> | Hasbro | <a href="lego.html">LEGO</a> | <a href="about.html">About</a> | 
-  <p>2008 Hasbro Legacy Millennium Falcon</p>
+  <p><h2>2008 Hasbro Legacy Millennium Falcon</h2></p>
   <img src="hasbro-falcon.jpg" alt="Hasbro Millennium Falcon">
   <p>The Hasbro Legacy Collection Millennium Falcon was scaled to 3 3/4" action figures as shown. It was released in 2008.</p>
   
