--- a/kenner.html
+++ b/kenner.html
@@ -5,7 +5,7 @@
 <body>
   <p><h1>Jason Ellis' Millennium Falcon Collectors Site > Kenner</h1></p>
   <p><a href="index.html">Home</a> | Kenner | <a href="hasbro.html">Hasbro</a> | <a href="lego.html">LEGO</a> | <a href="about.html">About</a> | 
-  <p>1979 Kenner Millennium Falcon</p>
+  <p><h2>1979 Kenner Millennium Falcon</h2></p>
   <img src="kenner-falcon.jpg" alt="Kenner Millennium Falcon">
   <p>The Kenner Millennium Falcon vehicle toy is scaled to 3 3/4" action figures as shown. It was released in 1979.</p>
   
