--- a/about.html
+++ b/about.html
@@ -6,8 +6,9 @@
   <p><h1>Jason Ellis' Millennium Falcon Collectors Site > About</h1></p>
   <p><a href="index.html">Home</a> | <a href="kenner.html">Kenner</a> | <a href="hasbro.html">Hasbro</a> | <a href="lego.html">LEGO</a> | <a href="about.html">About</a> 
   <img src="neil-degrasse-tyson-and-jason-ellis-2019-small.jpg" alt="Neil deGrass Tyson and Jason Ellis">
-    <p>This website is operated by Jason W. Ellis, who is an Associate Professor of English, Director of the B.S. in Professional and Technical Writing Program, and Coordinator for the City Tech Science Fiction Collection at the New York City College of Technology, CUNY. Formerly, he was a Marion L. Brittain Fellow at the Georgia Institute of Technology where he taught English Composition, Technical Communication, and Science Fiction, and directed the Writing and Communication Program’s Digital Pedagogy Research and Development Lab (DevLab). He holds a Ph.D. in English from Kent State University, M.A. in Science Fiction Studies from the University of Liverpool, and B.S. in Science, Technology, and Culture from Georgia Tech. 
- 
+    <p>This website is operated by Jason W. Ellis, who is an Associate Professor of English, Director of the B.S. in Professional and Technical Writing Program, and Coordinator for the City Tech Science Fiction Collection at the New York City College of Technology, CUNY. Formerly, he was a Marion L. Brittain Fellow at the Georgia Institute of Technology where he taught English Composition, Technical Communication, and Science Fiction, and directed the Writing and Communication Program’s Digital Pedagogy Research and Development Lab (DevLab). He holds a Ph.D. in English from Kent State University, M.A. in Science Fiction Studies from the University of Liverpool, and B.S. in Science, Technology, and Culture from Georgia Tech. </p>
+ <p>He got to tell Dr. Neil deGrasse Tyson (pictured above) about his lifelong love of Star Wars during the <a href="https://startalkmedia.com/show/creating-science-fiction-with-gale-anne-hurd/>May 30, 2019 episode of StarTalk Radio</a>.</p>
+  <p>He blogs at <a href="https://dynamicsubspace.net/">dynamicsubspace.net</a></p>
   
 </body>
 </html>
