--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 <body>
   <img src="millenniumfalcontitle.jpg" alt="Millennium Falcon">
   <p><h1>Jason Ellis' Millennium Falcon Collectors Site</h1></p>
-  <p>Home | <a href="kenner.html">Kenner</a> | <a href="hasbro.html">Hasbro</a> | <a href="lego.html">LEGO</a> | <a href="about.html">About</a> | 
-  <p>This website shows examples of toys of the Millennium Falcon from the Star Wars film series.</p>
+  <p>Home | <a href="kenner.html">Kenner</a> | <a href="hasbro.html">Hasbro</a> | <a href="lego.html">LEGO</a> | <a href="about.html">About</a> 
+  <p>This is a Star Wars fan site devoted to the fastest hunk of junk in the galaxy: the Millennium Falcon! It shows examples of toys of the Millennium Falcon from the Star Wars film series.</p>
   
 </body>
 </html>
