--- a/lego.html
+++ b/lego.html
@@ -4,7 +4,7 @@
 </head>
 <body>
   <p><h1>Jason Ellis' Millennium Falcon Collectors Site > LEGO</h1></p>
-  <p><a href="index.html">Home</a> | <a href="kenner.html">Kenner</a> | <a href="hasbro.html">Hasbro</a> | LEGO | <a href="about.html">About</a> | 
+  <p><a href="index.html">Home</a> | <a href="kenner.html">Kenner</a> | <a href="hasbro.html">Hasbro</a> | LEGO | <a href="about.html">About</a> 
   <p><h2>LEGO Star Wars The Rise of Skywalker Millennium Falcon 75257</h2></p>
   <img src="lego-falcon.jpg" alt="LEGO Millennium Falcon">
   <p>The LEGO Star Wars The Rise of Skywalker Millennium Falcon 75257 is scaled for LEGO minifigures. It was released in 2019.</p>
