--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
   <p>He blogs at <a href="https://dynamicsubspace.net/">dynamicsubspace.net</a></p>
 <hr>
 <p>Sitemap</p>
-<img src="sitemap.jpg">
+<img src="sitemap.jpg" alt="sitemap" scale="50%">
   
 </body>
 </html>
