--- a/kenner.html
+++ b/kenner.html
@@ -8,6 +8,7 @@
   <p><h2>1979 Kenner Millennium Falcon</h2></p>
   <img src="kenner-falcon.jpg" alt="Kenner Millennium Falcon">
   <p>The Kenner Millennium Falcon vehicle toy is scaled to 3 3/4" action figures as shown. It was released in 1979.</p>
+<p>For more information about the Kenner Millenium Falcon vehicle toy <a href="kenner_sub.html">click here</a>.
   
 </body>
 </html>
