--- a/kenner_sub.html
+++ b/kenner_sub.html
@@ -8,7 +8,7 @@
   <p><h2>1979 Kenner Millennium Falcon</h2></p>
   <img src="kenner-falcon.jpg" alt="Kenner Millennium Falcon">
   <p>The Kenner Millennium Falcon vehicle toy is scaled to 3 3/4" action figures as shown. It was released in 1979.</p>
-<p>For even more information about the Kenner Millenium Falcon vehicle toy <a href="kenner_sub_sub.html">click here</a>.
+<p>For even more information about the Kenner Millenium Falcon vehicle toy <a href="kenner_sub_sub.html">click here</a>, or to return to the main Kenner Millennium Falcon vehiclce toy page <a href="kenner.html">click here</a>.</p>
   
 </body>
 </html>
