--- a/kenner_sub.html
+++ b/kenner_sub.html
@@ -2,7 +2,7 @@
 <head>
 <title>Jason Ellis' Millennium Falcon Collectors Site > Kenner > Subpage </title>
 </head>
-<body>
+<body bgcolor="#4287f5">
   <p><h1>Jason Ellis' Millennium Falcon Collectors Site > Kenner > Subpage</h1></p>
   <p><a href="index.html">Home</a> | Kenner | <a href="hasbro.html">Hasbro</a> | <a href="lego.html">LEGO</a> | <a href="about.html">About</a> 
   <p><h2>1979 Kenner Millennium Falcon</h2></p>
